--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GH-Pages</title>
 </head>
+
 <body>
-    
+    <h1>Test</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis nulla sequi mollitia voluptates totam placeat
+        vel praesentium quo sit, aspernatur nobis, aliquam quis deserunt, omnis eum rerum provident magni excepturi?
+        </p>
 </body>
+
 </html>
