--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>GH-Pages</title>
 </head>
-
+<style>
+    * {
+        padding: 5px;
+    }
+</style>
 <body>
     <h1>Test</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis nulla sequi mollitia voluptates totam placeat
